--- a/index.html
+++ b/index.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
-<html> <!-- start html -->
+<html lang="en"> <!-- start html -->
 <head> <!-- start head -->
-	<title>PRUEBA</title>
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+	<title>.:: GMORA ::.</title>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/estilo.css"> <!-- css propio -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </head> <!-- end head -->
 
 <body> <!-- start body -->
-<div class="container"> <!-- start container -->
-	<div class="row">
-		<div class="col-xs-2"> <!-- logo -->
-		LOGO
-		</div> 
-		<div class="col-xs-10"> <!-- navegador -->
-		NAVEGADOR
-		</div>
-	</div>	
 
-	<div class="row">
-		<div class="col-xs-9"> CONTENIDO </div> 
-		<div class="col-xs-3"> NOTICIAS	</div>
-	</div>	
-
-	<div class="row">
-		<div class="col-xs-4"> DIRECCION </div> 
-		<div class="col-xs-4"> MAIL	</div>
-		<div class="col-xs-4"> MENU	</div>
-	</div>	
+	<div class="container">
+  		<!-- Content here -->
+	</div>
 
 
+<!-- Optional JavaScript; choose one of the two! -->
 
-
-
-</div> <!-- end container -->
-
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
 </body> <!-- end body -->
 </html> <!-- end html -->
